tests/typec-test/test_out/function-parse-out.txt
error: expected Ident | Operator but got '('
 --> function\root.ctl:1:24
  |
1 | fn "default" main() -> () { return 0 }
  |                        ^ token located here
  |
  = info: list -> item -> function definition -> function signature -> type

error: expected '=>' | '{' | 'extern' but got '('
 --> function\root.ctl:1:24
  |
1 | fn "default" main() -> () { return 0 }
  |                        ^ token located here
  |
  = info: list -> item -> function definition -> function body

